--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  background-color: #242424;
+  background-color: var(--branco-principal);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -29,6 +29,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 2px 2px 4px 0px;
 }
 
 .content-header {
@@ -48,7 +49,7 @@ header {
 }
 
 .content {
-  height: 90vh;
+  height: 86vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -187,14 +188,21 @@ form {
 
 .downloads {
   background-color: #028FCF;
-  width: 300px;
-  height: 300px;
+  width: 340px;
+  height: 370px;
   display: grid;
+  grid-template-rows: 60px repeat(3, 1fr);
   justify-items: center;
   align-items: center;
   border-radius: 10px;
   display: none;
 }
+
+.downloads h4 {
+  margin-top: 15px;
+  font-size: 18px;
+}
+
 
 .downloads div {
   background-color: var(--branco-principal);
